<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_add_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/add_contact"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/name_"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_add_contact" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/stephan"
                    app:layout_constraintStart_toStartOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <TextView
                    android:id="@+id/tv_surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/surname"
                    app:layout_constraintStart_toStartOf="@+id/et_name"
                    app:layout_constraintTop_toBottomOf="@+id/et_name" />

                <EditText
                    android:id="@+id/et_surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/mc_col"
                    app:layout_constraintStart_toStartOf="@+id/tv_surname"
                    app:layout_constraintTop_toBottomOf="@+id/tv_surname" />

                <TextView
                    android:id="@+id/tv_patronymic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/patronymic"
                    app:layout_constraintStart_toStartOf="@+id/et_surname"
                    app:layout_constraintTop_toBottomOf="@+id/et_surname" />

                <EditText
                    android:id="@+id/et_patronymic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/electro"
                    app:layout_constraintStart_toStartOf="@+id/tv_patronymic"
                    app:layout_constraintTop_toBottomOf="@+id/tv_patronymic" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/phone_"
                    app:layout_constraintStart_toStartOf="@+id/et_patronymic"
                    app:layout_constraintTop_toBottomOf="@+id/et_patronymic" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/test_number"
                    app:layout_constraintStart_toStartOf="@+id/tv_phone"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phone" />


                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/email"
                    app:layout_constraintStart_toStartOf="@+id/et_phone"
                    app:layout_constraintTop_toBottomOf="@+id/et_phone" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/test_email"
                    app:layout_constraintStart_toStartOf="@+id/tv_email"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email" />

                <Button
                    android:id="@+id/btn_add"
                    style="@style/PrimaryTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/add_contact"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_photo" />

                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_no_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_email" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>


    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>